patroni-pg/k8s/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: database
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: vault-postgres-security-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
