patroni-pg/k8s/06-vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: vault-postgres-security-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vault
  ports:
    - name: http
      port: 8200
      targetPort: http
