patroni-pg/k8s/11-python-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-postgres-demo
  namespace: demo
  labels:
    app.kubernetes.io/name: python-postgres-demo
    app.kubernetes.io/part-of: vault-postgres-security-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: python-postgres-demo
  ports:
    - name: http
      port: 8080
      targetPort: http
